--- a/proyecto1/stylesheets/estilo.css
+++ b/proyecto1/stylesheets/estilo.css
@@ -211,7 +211,7 @@ div > h4{
 
 /*RESPONSIVE*/
 
-@media screen and (max-width: 800px){
+@media screen and (min-width: 500px && max-width: 800px){
 	.seccionPrincipal{
 		flex-direction: column;
 	}
