--- a/proyecto1/stylesheets/normalize.css
+++ b/proyecto1/stylesheets/normalize.css
@@ -132,7 +132,7 @@ li:hover{
 		top: -1000px;
 		height: 180px;
 		width: 75%;
-		transition: all 1s;
+		transition: all .6s;
 		z-index: 1;
 	}
 	.liResponsive{
