Se dan los ultimos detalles, se agregan los enlaces, e incluso icono de la página Web

--- a/proyecto1/stylesheets/estilo.css
+++ b/proyecto1/stylesheets/estilo.css
@@ -171,6 +171,17 @@ i {
 #titPortafolio{
 	display: block;
 }
+#misProyectos.html{	
+	text-align: right;
+}
+#verMas{
+	width: 100%;
+	text-align: right;
+}
+#enlaceVerMas{
+	text-align: left;
+	width: 40px;
+}
 /*Footer*/
 footer{
 	display: grid;	
