--- a/proyecto1/stylesheets/estiloReferencias.css
+++ b/proyecto1/stylesheets/estiloReferencias.css
@@ -1,4 +1,6 @@
-
+#opReferencias{
+	background-color: #333;
+}
 .nav__responsive__ButtonContainers{	
 	margin-top: 0;
 	
@@ -33,22 +35,18 @@ div > h5{
 	grid-column: 1/3;
 }
 div .h3{
-	grid-column: 1/2;
+	grid-column: 1/3;
 }
 div h3{
-	grid-column: 1/2;
+	grid-column: 1/3;
 }
-div .fa-arrow-right{
-	grid-column: 2/3;
-	font-size: 30px;
+#telef{
+	grid-columns: 3/4;
 }
-div .fa-phone{
+#flecha2{
+	grid-template-rows: 1/2;
 	grid-column: 3/4;
-	width: 50%;
-	height: 50%;
-	border-radius: 22px;
-	align-self: center;
-	background-color: #347;
+	text-align: center;
 }
 .mapa{	
 	text-align: center;
