Se agrega y se modifica el código para las demás páginas acorde a actor y género

--- a/proyecto2/css/style.css
+++ b/proyecto2/css/style.css
@@ -5,7 +5,9 @@
     --light: #F2F2F2;
     --dark: #111111;
 }
-
+#ponerColor{
+    color: #000;
+}
 .fw-medium {
     font-weight: 600 !important;
 }
