--- a/proyecto3/clienteAngular/src/app/components/serie/serie.component.html
+++ b/proyecto3/clienteAngular/src/app/components/serie/serie.component.html
@@ -1,1 +1,28 @@
-<p>serie works!</p>
+<main class="container-fluid">
+	<div class="row pt-2">
+		<div class="col-12">
+			<mat-toolbar>
+				<button mat-icon-button color="primary" aria-label="menu" routerLink="/series">
+					<mat-icon>arrow_back</mat-icon>
+				</button>
+			</mat-toolbar>
+		</div>
+
+
+		<!-- Etiquetas a renderizar - INICIO -->
+		<div class="col-12 col-md-4 text-center justify-content-center mx-auto">
+			<div class="card border-0">
+				<img src="{{serie.img}}" class="rounded mx-auto d-block img-thumbnail border-0 shadow-4-strong" alt="{{serie.title}}">
+				<div class="card-body">
+					<h5 class="card-title">{{serie.title}}</h5>
+					<video src="{{serie.url}} " controls=''></video>
+					<div class="stats">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Etiquetas a renderizar - FIN -->
+			
+	</div>
+</main>
