--- a/proyecto3/clienteAngular/src/app/components/series/series.component.css
+++ b/proyecto3/clienteAngular/src/app/components/series/series.component.css
@@ -1,15 +1,16 @@
 #header {
-	background-image: url("../../../assets/images/istockphoto-1200199818-612x612.jpg");
+	background-image: url("../../../assets/images/titulo.png");
 	background-size:     cover;                    
 	background-repeat:   no-repeat;
 	background-position: center center;
-	height: 30vh;
+	height: 45vh;
 	width: 100vw;
 } 
 
 #content {
-	height: 70vh;
-	width: 100vw;	
+	height: 100%;
+	width: 100vw;
+	background-image: url("../../../assets/images/fondo2.jpg");
 }
 
 h1 {
