Subida para publicación en la web

--- a/proyecto3/clienteAngular/src/app/components/splash/splash.component.html
+++ b/proyecto3/clienteAngular/src/app/components/splash/splash.component.html
@@ -1,1 +1,24 @@
-<main id="splash" class="container-fluid"></main>
+<!DOCTYPE html>
+<html>
+<head>
+    
+</head>
+<body>
+    <main id="splash" class="container-fluid">
+        <div class="divPrincipal">
+            <h1>Capitulos de Tom Y Jerry</h1>
+            <p>
+                Bienvenidos a <strong>THE TOM AND JERRY SHOW</strong> dando clic en el boton de abajo podrás dirigirte a la página para observar los Capitulos del
+                dibujo animado que marco nuestro infancia
+            </p>
+            <button mat-icon-button color="primary" aria-label="menu" routerLink="/series"> Ir al sitio web                
+            </button>
+
+            <button mat-icon-button color="primary" aria-label="menu" routerLink="/historia"> Ver Historia                
+            </button>
+        </div>
+    
+    </main>
+</body>
+</html>
+
