--- a/proyecto3/clienteAngular/src/app/components/series/series.component.css
+++ b/proyecto3/clienteAngular/src/app/components/series/series.component.css
@@ -10,12 +10,17 @@
 #content {
 	height: 100%;
 	width: 100vw;
-	background-image: url("../../../assets/images/fondo2.jpg");
+	background-image: url("../../../assets/images/fondo3.jpg");
+}
+.cuerpoN{
+	background-color:#eee;
 }
 
 h1 {
-	color: #652e48;
-	font-size: 1.8rem;
+	color: #000;
+	padding: 20px;
+	font-size: 2.8rem;
+	text-align: center;
 }
 
 .card-body {
