--- a/proyecto3/clienteAngular/src/app/components/series/series.component.html
+++ b/proyecto3/clienteAngular/src/app/components/series/series.component.html
@@ -2,17 +2,17 @@
 	<div class="row">
 		<div id="header" class="col-12"></div>
 		<div id="content" class="col-12">
-			<h1 class="fw-bold mt-4 ">Wizarding World</h1>
+			<h1 class="fw-bold mt-4 ">TOM & JERRY</h1>
 			<div class="row mt-3">
 				
 				<!-- Etiquetas a repetir - INICIO -->
-				<div class="col-6 col-md-2 " *ngFor="let serie of series">
+				<div class="col-4 col-md-3 " *ngFor="let serie of series">
 					<div class="card border-0">
 						<div class="row g-0">
 							<div class="col-12">
 								<img src="{{serie.img}}" class="img-fluid rounded-start" alt="{{serie.title}}" >
 							</div>
-							<div class="col-12">
+							<div class="col-12 cuerpoN">
 								<div class="card-body">
 									<h3 class="card-title fw-bold text-center">
 									<a routerLink="/serie/{{serie.title}}">{{serie.title}}</a>
