--- a/proyecto3/clienteAngular/src/app/components/splash/splash.component.css
+++ b/proyecto3/clienteAngular/src/app/components/splash/splash.component.css
@@ -1,8 +1,72 @@
 main {
-	background-image: url("../../../assets/images/background.jpg");
+	background-image: url("../../../assets/images/fondo1.jpg");
 	background-size:     cover;                    
     background-repeat:   no-repeat;
     background-position: center center;
 	height: 100vh;
 	width: 100vw;
+}
+.divPrincipal{
+  position: relative;
+  width: 50%;
+  height: 50%;
+  left: 25%;
+  top: 25%;
+  padding: 5%;
+  text-align: center;
+}
+
+@keyFrames moverse{
+  0%{
+    width: 30% ;
+    height: 20%;
+    font-size: 16px;
+    box-shadow: 0px 0px 15px #000;
+
+}20%{
+  width: 34% ;
+  height: 23%;
+  font-size: 20px;
+  box-shadow: 0px 0px 15px #333;
+}
+40%{
+  width: 38% ;
+  height: 26%;
+  font-size: 24px;
+  box-shadow: 0px 0px 15px #666;
+}
+60%{
+  width: 37% ;
+  font-size: 25px;
+  height: 25%;
+  box-shadow: 0px 0px 15px #888;
+}
+80%{
+  width: 33% ;
+  font-size: 23px;
+  height: 23%;
+  box-shadow: 0px 0px 15px #555;
+}
+100%{
+  width: 30% ;
+  font-size: 21px;
+  height: 20%;
+  box-shadow: 0px 0px 15px #111;
+}
+}
+button{
+  background-color: #234;
+  color: #fff;
+  border-radius: 20%;
+  font-size: 20px;
+  width: 30%;
+  height: 20%;
+  padding: 3px;
+  margin: 4px;
+  box-shadow: 0px 0px 15px #000;
+  animation-name: moverse;
+	animation-iteration-count: infinite;
+	animation-duration: 1.5s;
+	animation-fill-mode: both;
+  
 }
